# datafusion-ignite-test

./: Cargo.toml  readme.md
src/: dynamic_type.rs  ignite_exec.rs  ignite_tableprovider.rs  main.rs
