[package]
name = "datafusion-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "8.0.0"
tokio = "1.18.2"
async-trait = "0.1.53"
ignite-rs = { path = "../ignite-rs/ignite-rs" }
ignite-rs_derive = "0.1.0"
anyhow = "1.0.57"
